--- a/UShorrorsite/_pkgdown.yml
+++ b/UShorrorsite/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: ~
+url: https://etc5523-2024.github.io/assignment-4-packages-and-shiny-apps-nsal0017/
 template:
   bootstrap: 5
   bootswatch: morph
